<resources>
    <string name="app_name">Personnel Accounting</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="development">Development</string>
    <string name="testing">Testing</string>
    <string name="user_relations">User relations</string>
    <string name="notifications">Notifications</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="register_now">Register Now</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="id">id</string>
    <string name="name">name</string>
    <string name="role">role</string>
    <string name="development_division">Development division</string>
    <string name="testing_division">Testing division</string>
    <string name="user_relations_division">User relations division</string>
    <string name="info">Info</string>
    <string name="ok">Ok</string>
    <string name="how_to_use">How to use</string>
</resources>