<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextTimestamp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id" />


    <EditText
        android:id="@+id/editTextMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/editTextServerId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/role" />

    <Button
        android:id="@+id/add_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="add developer" />


</LinearLayout>